--- a/Theme/Home/default/tpl_page.html
+++ b/Theme/Home/default/tpl_page.html
@@ -7,7 +7,7 @@
             <div class="dogo-box-header">
                 <h4><span class="glyphicon glyphicon-hand-right"></span> {$data.title}</h4>
                 <p>
-                    <span class="glyphicon glyphicon-user"></span> <a href="{:U('Home/User/index',array('uid'=>$data['members_id']))}">{$data.username} </a>
+                    <span class="glyphicon glyphicon-user"></span> <a href="{:U('User/index',array('uid'=>$data['members_id']))}">{$data.username} </a>
                       
                 </p>
             </div>
