会员模板升级

--- a/Theme/Home/blue/tpl_header.html
+++ b/Theme/Home/blue/tpl_header.html
@@ -5,12 +5,12 @@
         <title>{$title}-<dogocms:cfg name="cfg_sitename"/></title>
         <meta name="keywords" content="{$keywords}" />
         <meta name="description" content="{$description}" />
-        <link rel="stylesheet" type="text/css" href="{$style_cmomon}/v3.0.3/css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="{$style_cmomon}/v3.0.3/css/bootstrap-theme.min.css"/>
-
-        <link rel="stylesheet" type="text/css" href="{$style}/style/common.css"/>
-        <link rel="stylesheet" type="text/css" href="{$style}/style/css.css"/>
-        <link rel="stylesheet" type="text/css" href="{$style}/style/slide.css"/>
+        <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style_common}/v3.1.1/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style_common}/v3.1.1/css/bootstrap-theme.min.css"/>
+        <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style_common}/css/alertify.css"/>
+        <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style_common}/css/alertify.default.css"/>
+        <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style}/style/common.css"/>
+        <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style}/style/style.css"/>
 
     </head>
     <body>
