--- a/Theme/User/default/tpl_address_edit.html
+++ b/Theme/User/default/tpl_address_edit.html
@@ -1,9 +1,9 @@
-<include file="$header" />
+<include file="$tpl_header" />
 <div class="row">
     <div class="col-md-3">
 
         <div class="dogo-sidebar">
-            <include file="$sidebar" />
+            <include file="$tpl_sidebar" />
         </div><!--dogo-sidebar-->
     </div><!--col-md-->
     <div class="col-md-9">
@@ -11,7 +11,7 @@
             <h4>添加收货地址</h4>
             <div class="dogo-blank"></div>
 
-            <form class="form-horizontal " role="form" action="{:U('Member/Index/addressUpdate')}" method="post">
+            <form class="form-horizontal " role="form" action="{:U('User/Index/addressUpdate')}" method="post">
                 <input name="id" value="{$data.id}" type="hidden"/>
                 <div class="form-group">
                     <label for="inputName" class="col-sm-2 control-label">收货人姓名：</label>
@@ -84,7 +84,7 @@
 
     </div><!--col-md-->
 </div><!--row-->
-<include file="$footer" />
+<include file="$tpl_footer" />
 </div><!--container-->
 </div><!--dogo-page-->
 
