--- a/Theme/User/default/tpl_address_list.html
+++ b/Theme/User/default/tpl_address_list.html
@@ -1,9 +1,9 @@
-<include file="$header" />
+<include file="$tpl_header" />
 <div class="row">
     <div class="col-md-3">
 
         <div class="dogo-sidebar">
-            <include file="$sidebar" />
+            <include file="$tpl_sidebar" />
         </div><!--dogo-sidebar-->
     </div><!--col-md-->
     <div class="col-md-9">
@@ -11,7 +11,7 @@
             <h4>我的收货地址</h4>
             <div class="dogo-blank"></div>
             <lt name="count_address" value="5">
-                <a href="{:U('Index/addressAdd')}"><span class="btn btn-info">添加收货地址</span></a>
+                <a href="{:U('User/Index/addressAdd')}"><span class="btn btn-info">添加收货地址</span></a>
             </lt>
             <table class="table table-hover table-responsive">
                 <thead>
@@ -37,8 +37,8 @@
                     </if>
                     </td>
 
-                    <td><a href="{:U('Index/addressEdit',array('id'=>$vo['id']))}" title="编辑地址"><span class="glyphicon glyphicon-edit"></span></a> / 
-                        <a href="{:U('Index/addressDelete',array('id'=>$vo['id']))}" onclick="return confirm('确认要删除该信息吗？');" title="删除地址"><span class="glyphicon glyphicon-remove-circle"></span></a> </td>
+                    <td><a href="{:U('User/Index/addressEdit',array('id'=>$vo['id']))}" title="编辑地址"><span class="glyphicon glyphicon-edit"></span></a> / 
+                        <a href="{:U('User/Index/addressDelete',array('id'=>$vo['id']))}" onclick="return confirm('确认要删除该信息吗？');" title="删除地址"><span class="glyphicon glyphicon-remove-circle"></span></a> </td>
                     </tr>
                 </foreach>
                 </tbody>
@@ -51,7 +51,7 @@
 
     </div><!--col-md-->
 </div><!--row-->
-<include file="$footer" />
+<include file="$tpl_footer" />
 </div><!--container-->
 </div><!--dogo-page-->
 
