--- a/Theme/User/default/tpl_api_add.html
+++ b/Theme/User/default/tpl_api_add.html
@@ -1,9 +1,9 @@
-<include file="$header" />
+<include file="$tpl_header" />
 <div class="row">
     <div class="col-md-3">
 
         <div class="dogo-sidebar">
-            <include file="$sidebar" />
+            <include file="$tpl_sidebar" />
         </div><!--dogo-sidebar-->
     </div><!--col-md-->
     <div class="col-md-9">
@@ -11,7 +11,7 @@
             <h4>填写API信息</h4>
             <div class="dogo-blank"></div>
 
-            <form class="form-horizontal " role="form" action="{:U('Member/Index/apiInsert')}" method="post">
+            <form class="form-horizontal " role="form" action="{:U('User/Index/apiInsert')}" method="post">
                 <div class="form-group">
                     <label for="inputApiToken" class="col-sm-2 control-label">API Token：</label>
                     <div class="col-sm-10">
@@ -39,7 +39,7 @@
 
     </div><!--col-md-->
 </div><!--row-->
-<include file="$footer" />
+<include file="$tpl_footer" />
 </div><!--container-->
 </div><!--dogo-page-->
 
