--- a/Theme/User/default/tpl_index.html
+++ b/Theme/User/default/tpl_index.html
@@ -1,9 +1,9 @@
-<include file="$header" />
+<include file="$tpl_header" />
 <div class="row">
     <div class="col-md-3">
 
         <div class="dogo-sidebar">
-            <include file="$sidebar" />
+            <include file="$tpl_sidebar" />
         </div><!--dogo-sidebar-->
     </div><!--col-md-->
     <div class="col-md-9">
@@ -15,7 +15,7 @@
         </div><!--dogo-member-->
     </div><!--col-md-->
 </div><!--row-->
-<include file="$footer" />
+<include file="$tpl_footer" />
 </div><!--container-->
 </div><!--dogo-page-->
 
