--- a/Theme/User/default/tpl_personal.html
+++ b/Theme/User/default/tpl_personal.html
@@ -1,10 +1,10 @@
-<include file="$header" />
-<link rel="stylesheet" type="text/css" href="{$style_cmomon}/v3.0.3/css/bootstrap-datetimepicker.min.css"/>
+<include file="$tpl_header" />
+<link rel="stylesheet" type="text/css" href="__PUBLIC__{$style_common}/v3.1.1/css/bootstrap-datetimepicker.min.css"/>
 <div class="row">
     <div class="col-md-3">
 
         <div class="dogo-sidebar">
-            <include file="$sidebar" />
+            <include file="$tpl_sidebar" />
         </div><!--dogo-sidebar-->
     </div><!--col-md-->
     <div class="col-md-9">
@@ -12,7 +12,7 @@
             <h4>个人资料</h4>
             <div class="dogo-blank"></div>
 
-            <form class="form-horizontal " role="form" action="{:U('Member/Index/doPersonal')}" method="post">
+            <form class="form-horizontal " role="form" action="{:U('User/Index/doPersonal')}" method="post">
                 <div class="form-group">
                     <label for="inputName" class="col-sm-2 control-label input-lg">用户名：</label>
                     <div class="col-sm-10">
@@ -65,8 +65,8 @@
 
     </div><!--col-md-->
 </div><!--row-->
-<include file="$footer" />
-<script type="text/javascript" src="{$style_cmomon}/v3.0.3/js/bootstrap-datetimepicker.min.js"></script>
+<include file="$tpl_footer" />
+<script type="text/javascript" src="__PUBLIC__{$style_common}/v3.1.1/js/bootstrap-datetimepicker.min.js"></script>
 </div><!--container-->
 </div><!--dogo-page-->
 <script>
