--- a/Theme/User/default/tpl_news_list.html
+++ b/Theme/User/default/tpl_news_list.html
@@ -8,9 +8,8 @@
     </div><!--col-md-->
     <div class="col-md-9">
         <div class="dogo-member">
-            <h4>API列表</h4>
+            <h4>我的信息列表</h4>
             <div class="dogo-blank"></div>
-            <a href="{:U('User/Index/apiListAdd')}"><span class="btn btn-info">申请API接口</span></a>
             <table class="table table-hover table-responsive">
                 <thead>
                     <tr>
@@ -36,7 +35,9 @@
                 </foreach>
                 </tbody>
             </table>
-
+            <ul class="pagination">
+                {$page}
+            </ul>
         </div><!--dogo-member-->
 
 
