--- a/Theme/Home/default/tpl_footer.html
+++ b/Theme/Home/default/tpl_footer.html
@@ -39,7 +39,7 @@
                         <input type="text" name="yzmLogin" class="form-control input-lg" id="inputLoginYzm" placeholder="验证码" value="{$data.username}">
                     </div>
                     <div class="col-sm-4">
-                        <span class="dogo-click-yzmurl cursor"><img class="" src="{:U('User/Passport/verify')}" title="看不清？点击更换另一个验证码。"/>换一张</span>
+                        <span class="dogo-click-yzmurl cursor"><img style="width: 100%;" src="{:U('User/Passport/verify')}" title="看不清？点击更换另一个验证码。"/>换一张</span>
                     </div>
                 </div>
 
@@ -87,9 +87,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputSignupPwd2" class="col-sm-3 control-label input-lg">密码：</label>
+                    <label for="inputSignupPwd2" class="col-sm-3 control-label input-lg">确认密码：</label>
                     <div class="col-sm-9">
-                        <input type="password" name="pwd2Signup" class="form-control input-lg" id="inputSignupPwd2" placeholder="密码" value="{$data.username}">
+                        <input type="password" name="pwd2Signup" class="form-control input-lg" id="inputSignupPwd2" placeholder="确认密码" value="{$data.username}">
                     </div>
                 </div>
                 <div class="form-group">
@@ -98,7 +98,7 @@
                         <input type="text" name="yzmSignup" class="form-control input-lg" id="inputSignupYzm" placeholder="验证码" value="{$data.username}">
                     </div>
                     <div class="col-sm-4">
-                        <span class="dogo-click-yzmurl cursor"><img class="" src="{:U('User/Passport/verify')}" title="看不清？点击更换另一个验证码。"/>换一张</span>
+                        <span class="dogo-click-yzmurl cursor"><img style="width: 100%;" src="{:U('User/Passport/verify')}" title="看不清？点击更换另一个验证码。"/>换一张</span>
                     </div>
                 </div>
 
