--- a/Theme/User/default/tpl_header.html
+++ b/Theme/User/default/tpl_header.html
@@ -26,7 +26,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="__ROOT__"><dogocms:cfg name="cfg_sitename"/></a>
+                            <a class="navbar-brand" href="__ROOT__/"><dogocms:cfg name="cfg_sitename"/></a>
                         </div>
                         <div class="collapse navbar-collapse bs-js-navbar-collapse">
                             <ul class="nav navbar-nav">
