--- a/Theme/Admin/default/Passport/index.html
+++ b/Theme/Admin/default/Passport/index.html
@@ -27,7 +27,7 @@
                 <div class="loginad"></div><!--dloginad-->
                 <div class="loginfromfoot">
                     <div class="loginfromfoot_left">
-                        <h3><a href="__ROOT__" target="_blank">←去向站点首页</a></h3>
+                        <h3><a href="{:U('Home/Index/index')}" target="_blank">←去向站点首页</a></h3>
                     </div><!--loginfromfoot_left-->
                     <div class="loginfromfoot_right">
                         <button class="login_sub button" value="登录">登录</button>
