--- a/Theme/User/default/tpl_news_add.html
+++ b/Theme/User/default/tpl_news_add.html
@@ -8,24 +8,33 @@
     </div><!--col-md-->
     <div class="col-md-9">
         <div class="dogo-member">
-            <h4>填写API信息</h4>
+            <h4>说说当真SHI</h4>
             <div class="dogo-blank"></div>
+            <link rel="stylesheet" type="text/css" href="__PUBLIC__/Kindeditor/themes/default/default.css"/>
+            <link rel="stylesheet" type="text/css" href="__PUBLIC__/Kindeditor/themes/simple/simple.css"/>
+            <form class="form-horizontal " role="form" action="{:U('User/Index/newsInsert')}" method="post" target="_blank">
+                <div class="form-group">
+                    <label for="inputTitle" class="col-sm-2 control-label">标题：</label>
+                    <div class="col-sm-10">
+                        <input type="text" name="title" class="form-control input-lg" id="inputTitle" placeholder="">（太麻烦了，标题可以为空！~~~）
+                    </div>
+                </div><!--form-group-->
+                <div class="form-group">
+                    <label for="inputContent" class="col-sm-2 control-label">当真内容：</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control input-lg" name="content" id="inputContent" rows="9" required="required"
+                                  placeholder="填写当真内容"></textarea>
+                    </div>
+                </div><!--form-group-->
+                <div class="form-group">
+                    <label for="url1" class="col-sm-2 control-label">图片：</label>
+                    <div class="col-sm-10">
+                        <input type="text" name="titlepic" class="form-control input-lg" id="url1" placeholder="">
+                        <br/>
+                        <input name="image" type="button" id="image1" value="选择图片" class="btn btn-default col-lg-12 btn-lg dogo-color-white" />
+                    </div>
+                </div><!--form-group-->
 
-            <form class="form-horizontal " role="form" action="{:U('User/Index/apiInsert')}" method="post">
-                <div class="form-group">
-                    <label for="inputApiToken" class="col-sm-2 control-label">API Token：</label>
-                    <div class="col-sm-10">
-                        <input type="text" name="apitoken" class="form-control input-lg" id="inputApiToken" placeholder="请填写token信息(例：adminsir)" value="{$data.apitoken}" required="required">
-                    </div>
-                </div><!--form-group-->
-                <div class="form-group">
-                    <label for="inputDomain" class="col-sm-2 control-label">站点域名：</label>
-                    <div class="col-sm-10">
-                        <textarea class="form-control input-lg" name="domain" id="inputDomain" rows="3" required="required"
-                                  placeholder="站点域名，多个域名使用“|”分开,域名示例adminsir.net|www.adminsir.net">{$data.domain}</textarea>
-                        （注：申请API后，需等管理员重新审核通过。）
-                    </div>
-                </div><!--form-group-->
                 <div class="form-group">
                     <div class=" col-sm-12">
                         <button type="submit" class="btn btn-default col-lg-12 btn-lg dogo-color-white">提交</button>
@@ -40,6 +49,29 @@
     </div><!--col-md-->
 </div><!--row-->
 <include file="$tpl_footer" />
+<script type="text/javascript" src="__PUBLIC__/Kindeditor/kindeditor-min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Kindeditor/lang/zh_CN.js"></script>
+<script>
+    $(function() {
+        var editor = KindEditor.editor({
+            allowFileManager: false,//隐藏图片空间按钮
+            uploadJson: '{:U("User/Index/uploadImg")}'
+        });
+        KindEditor('#image1').click(function() {
+            editor.loadPlugin('image', function() {
+                editor.plugin.imageDialog({
+                    //showRemote : false,//隐藏网络图片选项卡
+                    imageUrl: KindEditor('#url1').val(),
+                    clickFn: function(url, title, width, height, border, align) {
+                        KindEditor('#url1').val(url);
+                        editor.hideDialog();
+                    }
+                });
+            });//
+        });
+
+    });
+</script>
 </div><!--container-->
 </div><!--dogo-page-->
 
