信息发表、会员中心信息展示

--- a/Theme/User/default/tpl_news_add.html
+++ b/Theme/User/default/tpl_news_add.html
@@ -12,7 +12,7 @@
             <div class="dogo-blank"></div>
             <link rel="stylesheet" type="text/css" href="__PUBLIC__/Kindeditor/themes/default/default.css"/>
             <link rel="stylesheet" type="text/css" href="__PUBLIC__/Kindeditor/themes/simple/simple.css"/>
-            <form class="form-horizontal " role="form" action="{:U('User/Index/newsInsert')}" method="post" target="_blank">
+            <form class="form-horizontal " role="form" action="{:U('User/Index/newsInsert')}" method="post">
                 <div class="form-group">
                     <label for="inputTitle" class="col-sm-2 control-label">标题：</label>
                     <div class="col-sm-10">
