--- a/Theme/User/default/tpl_news_list.html
+++ b/Theme/User/default/tpl_news_list.html
@@ -10,31 +10,45 @@
         <div class="dogo-member">
             <h4>我的信息列表</h4>
             <div class="dogo-blank"></div>
-            <table class="table table-hover table-responsive">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Token</th>
-                        <th>添加时间</th>
-                        <th>状态</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                <foreach name="list" item="vo" key="i">
-                    <tr>
-                        <td>{$i+1}</td>
-                        <td>{$vo.apitoken}</td>
-                        <td>{$vo.addtime|date="Y-m-d H:i",###}</td>
-                        <td>{$vo.status}</td>
-                        <td><a href="{:U('User/Index/apiListEdit',array('id'=>$vo['id']))}" title="编辑API"><span class="glyphicon glyphicon-edit"></span></a> / 
-                            <a href="{:U('User/Index/apiDelete',array('id'=>$vo['id']))}" onclick="return confirm('确认要删除该信息吗？');" title="删除API">
-                                <span class="glyphicon glyphicon-remove-circle"></span></a>
-                        </td>
-                    </tr>
-                </foreach>
-                </tbody>
-            </table>
+
+            <foreach name="list" item="vo" key="i">
+                <section class="dogo-box dogo-border-all dogo-pd515 dogo-bg-white">
+                    <div class="dogo-box-header">
+                        <h5>
+                            <if condition="$vo.title neq ''">
+                                <span class="glyphicon glyphicon-hand-right"></span> 
+                                <a href="{:U('Home/Content/index',array('id'=>$vo['id']))}" target="_blank">
+                                    {$vo.title}
+                                </a>
+                                &nbsp;&nbsp;
+                            </if>
+                            <a href="{:U('Home/Content/index',array('id'=>$vo['id']))}" title="在新页面打开" target="_blank">
+                                <span class="glyphicon glyphicon-share"></span> 点击浏览
+                            </a>&nbsp;&nbsp;
+                            <span class="glyphicon glyphicon-thumbs-up"></span> 
+                            ({$vo.num_top})&nbsp;&nbsp;
+                            <span class="glyphicon glyphicon-thumbs-down"></span> 
+                            ({$vo.num_beat})&nbsp;&nbsp;
+                            <a href="{:U('Home/Content/index',array('id'=>$vo['id']))}" target="_blank" title="评论">
+                                <span class="glyphicon glyphicon-comment"></span> ({$vo.num_comment})
+                            </a>&nbsp;&nbsp;
+                            ({$vo.status})
+                        </h5>
+
+                    </div>
+                    <div class="dogo-box-content">
+                        <p>
+                            {$vo.content}
+                        <if condition="$vo.titlepic neq ''">
+                            <br/>
+                            <a href="{:U('Home/Content/index',array('id'=>$vo['id']))}"><img class="img-responsive" src="{$vo.titlepic}"/></a>
+                        </if>
+                        </p>
+                    </div><!--dogo-box-content-->
+
+                </section><!--dogo-box-->
+                <div class="dogo-blank"></div>
+            </foreach>
             <ul class="pagination">
                 {$page}
             </ul>
