--- a/Theme/Home/default/tpl_user.html
+++ b/Theme/Home/default/tpl_user.html
@@ -23,7 +23,7 @@
                 友情链接
             </div>
             <div class="dogo-box-content dogo-links">
-                
+
                 <dogocms:links >
                     <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
                 </dogocms:links>
@@ -40,10 +40,14 @@
         <foreach name="list" item="vo" key="i">
             <section class="dogo-box dogo-border-all dogo-pd515">
                 <div class="dogo-box-header">
-                    <h4><span class="glyphicon glyphicon-hand-right"></span> <a href="{:U('Home/Content/index',array('id'=>$vo['id']))}">{$vo.title}</a></h4>
+                    <if condition="$vo.title neq ''">
+                        <h4><span class="glyphicon glyphicon-hand-right"></span> <a href="{:U('Home/Content/index',array('id'=>$vo['id']))}">{$vo.title}</a></h4>
+                    </if>
                     <p>
                         <span class="glyphicon glyphicon-user"></span> <a href="{:U('Home/User/index',array('uid'=>$vo['members_id']))}">{$vo.username} </a>
-                        
+                        <a href="{:U('Home/Content/index',array('id'=>$vo['id']))}" title="在新页面打开" target="_blank">
+                            <span class="glyphicon glyphicon-share"></span> 点击围观真SHI
+                        </a>&nbsp;&nbsp;
                     </p>
                 </div>
                 <div class="dogo-box-content">
