--- a/Theme/User/default/tpl_news_add.html
+++ b/Theme/User/default/tpl_news_add.html
@@ -34,12 +34,19 @@
                         <input name="image" type="button" id="image1" value="选择图片" class="btn btn-default col-lg-12 btn-lg dogo-color-white" />
                     </div>
                 </div><!--form-group-->
-
+                <p>
+                    注意事项：（投稿须知）<br/>
+                    1、自己的或朋友的当真的SHI，真实有笑点，不含政治、色情、广告、诽谤、歧视等内容。<br/>
+                    2、当真SHI经过审核后发表。<br/>
+                    3、转载请注明出处。<br/>
+                    4、投稿内容著作权、版权归当真SHI网站所有。<br/>
+                </p>
                 <div class="form-group">
                     <div class=" col-sm-12">
                         <button type="submit" class="btn btn-default col-lg-12 btn-lg dogo-color-white">提交</button>
                     </div>
                 </div>
+                
             </form>
         </div><!--dogo-member-->
 
@@ -54,7 +61,7 @@
 <script>
     $(function() {
         var editor = KindEditor.editor({
-            allowFileManager: false,//隐藏图片空间按钮
+            allowFileManager: false, //隐藏图片空间按钮
             uploadJson: '{:U("User/Index/uploadImg")}'
         });
         KindEditor('#image1').click(function() {
