--- a/Theme/Home/blue/tpl_header.html
+++ b/Theme/Home/blue/tpl_header.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>{$title}-<dogocms:cfg name="cfg_sitename"/></title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="keywords" content="{$keywords}" />
         <meta name="description" content="{$description}" />
         <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style_common}/v3.1.1/css/bootstrap.min.css"/>
@@ -11,97 +13,72 @@
         <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style_common}/css/alertify.default.css"/>
         <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style}/style/common.css"/>
         <link rel="stylesheet" type="text/css" href="__PUBLIC__{$style}/style/style.css"/>
-
     </head>
     <body>
-        <div class="dogo-page">
-            <header class="dogo-header">
-                <div class="dogo-wp">
-                    <div class="dogo-top">
-                        <h1>matias gallipoli</h1>
-                        <h2><a href="#lemon">互联网<span>/</span>物联网<span>/</span>移动互联网</a></h2>
-                        <h4><span>©</span>2013 QiuYunTech</h4>
-                        <h3>Qiu Yun Code</h3>
-                    </div><!--dogo-top-->
+        <div class="dogo-page ">
 
-                </div><!--dogo-wp-->
+            <header class="dogo-header">
+                <nav class="navbar navbar-default dogo-header-navbar" role="navigation">
+                    <div class="navbar-header">
+                        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-js-navbar-collapse">
+                            <span class="sr-only"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="{:U('Home/Index/index')}"><dogocms:cfg name="cfg_sitename"/></a>
+                    </div>
+                    <div class="collapse navbar-collapse bs-js-navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <volist name="navhead" id="navlist">
+                                <li class="dropdown">
+                                <if condition="$navlist.children eq ''">
+                                    <a id="" href="__ROOT__{$navlist.url}" role="button" class="dropdown-toggle" data-toggle="">{$navlist.text} </a>
+                                    <else/>
+                                    <a id="" href="__ROOT__{$navlist.url}" role="button" class="dropdown-toggle" data-toggle="dropdown">{$navlist.text} <b class="caret"></b></a>
+                                </if>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="">
+                                    <volist name="navlist.children" id="vo">
+                                        <li role="presentation"><a role="menuitem" href="__ROOT__{$vo.url}">{$vo.text}</a></li>
+                                    </volist>
+                                    <!--<li role="presentation" class="divider"></li>-->
+                                </ul>
+                                </li>
+                            </volist>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li id="fat-menu" class="dropdown">
+                                <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">会员中心<b class="caret"></b></a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="drop3">
+                                    <php>if(session('LOGIN_M_STATUS')=='TRUE'){</php>
+                                    <li><a role="menuitem" href="{:U('User/Index/index')}"> <span class="glyphicon glyphicon-home"></span> 我的主页</a></li>
+                                    <li><a role="menuitem" href="{:U('User/Index/changePwd')}"> <span class="glyphicon glyphicon-edit"></span> 修改密码</a></li>
+                                    <li class="divider"></li>
+                                    <li><a role="menuitem" href="javascript:void(0)" class="dogo-click-logout"> <span class="glyphicon glyphicon-log-out"></span> 退出登录</a></li>
+                                    <php>}else{</php>
+                                    <li><a role="menuitem" href="{:U('User/Passport/login')}" title="登录"> <span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+                                    <li><a role="menuitem" href="{:U('User/Passport/signup')}" title="注册"><span class="glyphicon glyphicon-plus-sign"></span>注册</a></li>
+                                    <li><a role="menuitem" href="{:U('User/Passport/resetPassword')}"> <span class="glyphicon glyphicon-question-sign"></span> 忘记密码</a></li>
+                                    <php>}</php>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div><!-- /.nav-collapse -->
+                </nav>
             </header>
 
 
-            <section class="dogo-section dogo-black-bk">
-                <div class="dogo-wp">
-                    <div class="row">
-                        <span class="col-md-12">
-                            <h1 style="height: 55px;color: #fff;">QiuYunTech优秀站点</h1>
-                        </span>
-                    </div>
-                    <div class="row">
-                        <dogocms:block typeid="4" limit="8">
-                            <span class="col-md-3">
-
-                                <div class="dogo-website">
-                                    <div class="dogo-content dogo-radius">
-                                        <img src="{$block.title_img}"/>
-                                        <div class="dogo-mask dogo-mask-1">
-                                            <a href="{$block.field1}" class="">{$block.field2}</a>
-                                        </div>
-                                        <div class="dogo-mask dogo-mask-2">
-                                            <a href="{$block.url}" target="_blank" class="btn dogo-tooltip btn-default" data-toggle="tooltip" data-placement="top" title="{$block.description}" data-original-title="{$block.description}">{$block.field3} >></a>
-                                        </div>
-                                    </div><!--dogo-content-->
-                                </div><!--dogo-website-->
-                            </span>
-                        </dogocms:block>
-                        
-                    </div>
-                </div><!--dogo-wp-->
-            </section><!--dogo-section-->
 
 
-            <section class="dogo-section dogo-lemon">
-                <div class="dogo-wp">
-                    <div class="row">
-
-                    </div>
-                </div><!--dogo-wp-->
-            </section><!--dogo-section-->
-
-            <section class="dogo-section dogo-orange">
-                <div class="dogo-wp">
-                    <div class="row">
-
-                    </div>
-                </div><!--dogo-wp-->
-            </section><!--dogo-section-->
 
 
-            <section class="dogo-section dogo-gray">
-                <div class="dogo-wp">
-
-                </div><!--dogo-wp-->
-            </section><!--dogo-section-->
-
-            <section class="dogo-section dogo-purple">
-                <div class="dogo-wp">
-                    <div class="row">
-
-                    </div>
-                </div><!--dogo-wp-->
-            </section><!--dogo-section-->
 
 
-            <section class="dogo-section dogo-light-green">
-                <div class="dogo-wp">
-
-                </div><!--dogo-wp-->
-            </section><!--dogo-section-->
 
 
-            <section class="dogo-section dogo-blue">
-                <div class="dogo-wp">
 
-                </div><!--dogo-wp-->
-            </section><!--dogo-section-->
+            <div class="container">
+
 
 
 
