--- a/Theme/Admin/default/Ads/newslist.html
+++ b/Theme/Admin/default/Ads/newslist.html
@@ -7,8 +7,8 @@
     $(function() {
         var height = $('.indexcenter').height();
         var classId = 'adstab{$id}';
-        var hrefadd = '{:U("Admin/Ads/add",array("id"=>$id))}';
-        var hrefedit = '{:U("Admin/Ads/Ads")}';
+        var hrefadd = '{:U("Admin/Ads/add")}';
+        var hrefedit = '{:U("Admin/Ads/edit")}';
         var hrefcancel = '{:U("Admin/Ads/delete")}';
         var urljson = '{:U("Admin/Ads/listJsonId",array("id"=>$id))}';
         //openDatagrid(classId,urljson,hrefadd,hrefedit,hrefcancel);
