--- a/Theme/Home/blue/tpl_content.html
+++ b/Theme/Home/blue/tpl_content.html
@@ -11,7 +11,7 @@
                     <span class="glyphicon glyphicon-time"></span>  {$data.addtime|date="Y-m-d H:i:s",###}
                 </p>
             </div>
-            <div class="dogo-box-content">
+            <div class="dogo-box-content dogo-view">
                 <p><if condition="$data.titlepic neq ''">
                     <br/>
                     <img class="img-responsive" src="{$data.titlepic}"/>
