修正后台分类、分类标签调用、前台模板

--- a/Theme/Home/blue/tpl_index.html
+++ b/Theme/Home/blue/tpl_index.html
@@ -29,7 +29,7 @@
                         <h4><a href="#lemon">互联网</a><span>/</span>
                             <a href="#lemon">物联网</a><span>/</span>
                             <a href="#lemon">移动互联网</a></h4>
-                        <h4><span>©</span>2013-2014 秋允技术 QiuYunTech.com</h4>
+                        <h4><span>©</span>2013-2014 <!--秋允技术 QiuYunTech.com--></h4>
                         <h3>Qiu Yun Code</h3>
                     </div>
                 </div><!--container-->
@@ -388,17 +388,7 @@
                                 <div class="dogo-text-links">
                                     <dogocms:links >
                                         <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
-                                        <a href="{$links.weburl}" target="_blank" title="{$links.webname}">{$links.webname}</a>
+                                        
                                     </dogocms:links>
                                 </div>
                             </div><!--//dogo-text-->
