--- a/Theme/Shop/purple/tpl_footer.html
+++ b/Theme/Shop/purple/tpl_footer.html
@@ -1,21 +1,12 @@
-<footer class="dogo-footer">
-    <div class="dogo-blank"></div>
+<div class="container">
+    <footer class="dogo-footer">
+        <div class="dogo-blank"></div>
 
 
+        
 
-
-
-
-</footer>
-
-
-
-
-
-
-
-
-
+    </footer>
+</div><!--container-->
 <script type="text/javascript" src="__PUBLIC__{$style_common}/js/jquery-2.1.0.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__{$style_common}/v3.1.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__{$style_common}/js/alertify.min.js"></script>
