--- a/Theme/Shop/purple/tpl_header.html
+++ b/Theme/Shop/purple/tpl_header.html
@@ -65,6 +65,23 @@
                                     </ul>
                                 </li>
                             </ul>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li id="fat-menu" class="dropdown">
+                                    <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">购物车<b class="caret"></b></a>
+                                    <ul class="dropdown-menu" role="menu" aria-labelledby="drop3">
+                                        <php>if(session('LOGIN_M_STATUS')=='TRUE'){</php>
+                                        <li><a role="menuitem" href="{:U('User/Index/index')}"> <span class="glyphicon glyphicon-home"></span> 我的主页</a></li>
+                                        <li><a role="menuitem" href="{:U('User/Index/changePwd')}"> <span class="glyphicon glyphicon-edit"></span> 修改密码</a></li>
+                                        <li class="divider"></li>
+                                        <li><a role="menuitem" href="javascript:void(0)" class="dogo-click-logout"> <span class="glyphicon glyphicon-log-out"></span> 退出登录</a></li>
+                                        <php>}else{</php>
+                                        <li><a role="menuitem" href="{:U('User/Passport/login')}" title="登录"> <span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+                                        <li><a role="menuitem" href="{:U('User/Passport/signup')}" title="注册"><span class="glyphicon glyphicon-plus-sign"></span>注册</a></li>
+                                        <li><a role="menuitem" href="{:U('User/Passport/resetPassword')}"> <span class="glyphicon glyphicon-question-sign"></span> 忘记密码</a></li>
+                                        <php>}</php>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div><!-- /.nav-collapse -->
 
                     </div>
