--- a/Theme/Shop/default/tpl_content.html
+++ b/Theme/Shop/default/tpl_content.html
@@ -1,98 +1,9 @@
 <include file="$tpl_header" />
-<div class="row">
-    <div class="col-md-8">
+<div class="container">
+<div class="row dogo-list">
+    
 
-
-        <article class="dogo-box dogo-border-all dogo-pd515">
-            <div class="dogo-box-header">
-                <if condition="$data.title neq ''">
-                    <h4><span class="glyphicon glyphicon-hand-right"></span> {$data.title}</h4>
-                </if>
-                <p>
-                    <span class="glyphicon glyphicon-user"></span> <a href="{:U('Home/User/index',array('uid'=>$data['members_id']))}">{$data.username} </a>
-
-                </p>
-            </div>
-            <div class="dogo-box-content">
-                <p>
-                    {$data.content}
-                <if condition="$data.titlepic neq ''">
-                    <br/>
-                    <img src="{$data.titlepic}"/>
-                </if>
-                </p>
-            </div><!--dogo-box-content-->
-            <div class="dogo-box-footer">
-                <div class="row">
-                    <div class="col-md-6">
-                        <span type="button" class="btn btn-default dogo-click-up disabled_{$data.id}" data-row-id="{$data.id}" title="顶"> <span class="glyphicon glyphicon-thumbs-up"></span> <span class="num_up_{$data.id}">{$data.num_top}</span></span>
-                        <span type="button" class="btn btn-default dogo-click-down disabled_{$data.id}" data-row-id="{$data.id}" title="踩"> <span class="glyphicon glyphicon-thumbs-down"></span> <span class="num_down_{$data.id}">{$data.num_beat}</span></span>
-                    </div>
-                    <div class="col-md-6 dogo-align">
-                        <span type="button" class="btn btn-default" title="评论"> <span class="glyphicon glyphicon-comment"></span> <span class="num_comment_{$data.id}">{$data.num_comment}</span></span>
-                        <span type="button" class="btn btn-default"> <span class="glyphicon glyphicon-share"></span> 分享</span>
-                    </div>
-                </div><!--row-->
-            </div><!--dogo-box-footer-->
-        </article><!--dogo-box-->
-        <div class="dogo-blank"></div>
-
-
-
-        <section class="dogo-box dogo-border-all dogo-pd515">
-            <div class="dogo-box-header">
-
-            </div>
-            <div class="dogo-box-content">
-
-            </div><!--dogo-box-content-->
-            <div class="dogo-box-footer">
-
-            </div><!--dogo-box-footer-->
-        </section><!--dogo-box-->
-        <div class="dogo-blank"></div>
-
-
-
-
-
-        <section class="dogo-box dogo-border-all dogo-pd515">
-            <div class="dogo-box-header">
-                <h5><span class="glyphicon glyphicon-hand-right"></span> 评论</h5>
-            </div>
-            <div class="dogo-box-content dogo-list-comment">
-                <ul>
-                    <foreach name="list_comment" item="vo">
-                        <li><span class="glyphicon glyphicon-user"></span> 
-                            <a href="{:U('Home/User/index',array('uid'=>$vo['members_id']))}">{$vo.username} </a>
-                            {$vo.content}
-                            <span class="dogo-frt">#{$vo.floor}</span>
-                        </li>
-                    </foreach>
-                </ul>
-            </div><!--dogo-box-content-->
-            <div class="dogo-box-footer">
-                <input type="hidden" name="data-id" value="{$data.id}"/>
-                <textarea name="content-comment" class="form-control disabled" rows="3"></textarea>
-                <br/>
-                <button type="button" class="btn btn-info dogo-click-submit">发表评论</button>
-            </div><!--dogo-box-footer-->
-        </section><!--dogo-box-->
-        <div class="dogo-blank"></div>
-
-        <section class="dogo-box dogo-border-all dogo-pd515">
-            <div class="dogo-box-header">
-
-            </div>
-            <div class="dogo-box-content">
-
-            </div><!--dogo-box-content-->
-            <div class="dogo-box-footer">
-
-            </div><!--dogo-box-footer-->
-        </section><!--dogo-box-->
-
-
+<div class="col-md-8">
     </div><!--col-md-->
     <div class="col-md-4">
         <div class="dogo-blank"></div>
