--- a/Theme/Shop/default/tpl_footer.html
+++ b/Theme/Shop/default/tpl_footer.html
@@ -1,130 +1,26 @@
-<footer class="dogo-footer">
-    <div class="dogo-blank"></div>
+<div class="container">
+    <footer class="dogo-footer">
+        <div class="dogo-blank"></div>
 
 
+        
 
-
-
-    <div class="row">
-        <div class="col-md-12 dogo-align-center">
-            <p><dogocms:cfg name="cfg_copyright"/></p>
-        </div><!--col-md-->
-    </div><!--row-->
-</footer>
-
-<!-- Modal Login-->
-<div class="modal fade dogo-dialog-modal dogo-dialog-login" tabindex="-1" role="dialog" aria-labelledby="dialog_emailauth" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header dogo-modal-title">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title "><span class="on">登录</span> <span class="dogo-click-signup cursor noon">注册</span></h4>
-            </div>
-            <div class="modal-body form-horizontal">
-                <div class="form-group">
-                    <label for="inputLoginEmail" class="col-sm-3 control-label input-lg">邮箱：</label>
-                    <div class="col-sm-9">
-                        <input type="text" name="emailLogin" class="form-control input-lg" id="inputLoginEmail" placeholder="输入绑定的邮箱" value="{$data.username}">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputLoginPwd" class="col-sm-3 control-label input-lg">密码：</label>
-                    <div class="col-sm-9">
-                        <input type="password" name="pwdLogin" class="form-control input-lg" id="inputLoginPwd" placeholder="密码" value="{$data.username}">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputLoginYzm" class="col-sm-3 control-label input-lg">验证码：</label>
-                    <div class="col-sm-5">
-                        <input type="text" name="yzmLogin" class="form-control input-lg" id="inputLoginYzm" placeholder="验证码" value="{$data.username}">
-                    </div>
-                    <div class="col-sm-4">
-                        <span class="dogo-click-yzmurl cursor"><img style="width: 100%;" src="{:U('User/Passport/verify')}" title="看不清？点击更换另一个验证码。"/>换一张</span>
-                    </div>
-                </div>
-
-
-            </div><!--modal-body-->
-            <div class="modal-footer">
-
-                <button type="button" class="btn btn-info dogo-click-sublogin" >提交登录</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal --> 
-
-
-
-
-
-
-<!-- Modal -->
-<div class="modal fade dogo-dialog-modal dogo-dialog-signup" tabindex="-1" role="dialog" aria-labelledby="dialog_emailauth" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header dogo-modal-title">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="on">注册</span><span class="dogo-click-login cursor noon">登录</span> </h4>
-            </div>
-            <div class="modal-body form-horizontal">
-                <div class="form-group">
-                    <label for="inputSignupUsername" class="col-sm-3 control-label input-lg">用户名：</label>
-                    <div class="col-sm-9">
-                        <input type="text" name="usernameSignup" class="form-control input-lg" id="inputSignupUsername" placeholder="用户名" value="{$data.username}">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputSignupEmail" class="col-sm-3 control-label input-lg">邮箱：</label>
-                    <div class="col-sm-9">
-                        <input type="text" name="emailSignup" class="form-control input-lg" id="inputSignupEmail" placeholder="邮箱" value="{$data.username}">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputSignupPwd" class="col-sm-3 control-label input-lg">密码：</label>
-                    <div class="col-sm-9">
-                        <input type="password" name="pwdSignup" class="form-control input-lg" id="inputSignupPwd" placeholder="密码" value="{$data.username}">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputSignupPwd2" class="col-sm-3 control-label input-lg">确认密码：</label>
-                    <div class="col-sm-9">
-                        <input type="password" name="pwd2Signup" class="form-control input-lg" id="inputSignupPwd2" placeholder="确认密码" value="{$data.username}">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputSignupYzm" class="col-sm-3 control-label input-lg">验证码：</label>
-                    <div class="col-sm-5">
-                        <input type="text" name="yzmSignup" class="form-control input-lg" id="inputSignupYzm" placeholder="验证码" value="{$data.username}">
-                    </div>
-                    <div class="col-sm-4">
-                        <span class="dogo-click-yzmurl cursor"><img style="width: 100%;" src="{:U('User/Passport/verify')}" title="看不清？点击更换另一个验证码。"/>换一张</span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-info dogo-click-subsignup">提交注册</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal --> 
-
-
-
-
-
-
-
-
+    </footer>
+</div><!--container-->
 <script type="text/javascript" src="__PUBLIC__{$style_common}/js/jquery-2.1.0.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__{$style_common}/v3.1.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__{$style_common}/js/alertify.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__{$style_common}/js/jquery.cookie.js"></script>
+<script type="text/javascript" src="__PUBLIC__{$style_common}/js/jquery.bxslider.min.js"></script>
+
 
 <script>
     $(function() {
+        $('.bxslider').bxSlider({
+            mode: 'fade',
+            captions: true,
+            auto: true
+        });
         $('.dogo-click-sublogin').click(function() {
             var email = $('input[name="emailLogin"]').val();
             var pwd = $('input[name="pwdLogin"]').val();
