修正友情链接

--- a/Theme/Admin/default/Links/add.html
+++ b/Theme/Admin/default/Links/add.html
@@ -16,7 +16,7 @@
                 </tr>
                 <tr>
                     <th>状态：</th>
-                    <td><html:radio name="status" radios="radios" checked="y" /></td>
+                    <td><html:radio name="status" radios="status" checked="20" /></td>
             </tr>
             <tr>
                 <th>文档标题图：</th>
