--- a/Theme/Admin/default/Links/edit.html
+++ b/Theme/Admin/default/Links/edit.html
@@ -17,7 +17,7 @@
                 </tr>
                 <tr>
                     <th>状态：</th>
-                    <td><html:radio name="status" radios="radios" checked="v_status" /></td>
+                    <td><html:radio name="status" radios="status" checked="v_status" /></td>
             </tr>
             <tr>
                 <th>友情链接图片：</th>
